@@ -3,6 +3,7 @@
 = GENI Clearinghouse and Portal Release Notes =
 
 == 2.0 ==
+  * enable VERIFYHOST in put_message (#660)
 
 == 1.9.5 ==
   * slice expiration shouldn't pick a date past project expiration (#614)
